--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ html
 
 body
 {
-    background: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url('../image/Kyoto-Japan.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url('./image/Kyoto-Japan.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
